# ESP32-Security-System-Server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  f
include/: LicenseInfo.h  MessageHandler.h  ServerTCP.h
include/ReaderJSON/: ReaderJSON.h
include/Server/: ServerTCP.h
src/: LicenseInfo.cpp  Logger.cpp  MessageHandler.cpp  ReaderJSON.cpp  ServerTCP.cpp  main.cpp
src/LicenseInfo/: LicenseInfo.cpp
src/ReaderJSON/: ReaderJSON.cpp
src/Server/: Logger.cpp  ServerTCP.cpp
src/json_reader/: jsonReader.cpp  jsonReader.h  json_reader.cpp  json_reader.h
src/licenseInfo/: licenseInfo.cpp  licenseInfo.h
src/server/: Logger.h  serverTCP.cpp  serverTCP.h  tcp_server.cpp  tcp_server.h
tests/: test.cpp
